# FitnessStat

./: .env.docker  .env.local  Dockerfile  LICENSE  docker-compose.yml  manage.py  pyproject.toml
FitnessStat/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
chats/: apps.py  middleware.py  routing.py
chats/consumers/: base.py
chats/migrations/: 0001_initial.py
chats/models/: chat.py  message.py
docker/nginx/: default_location
posts/: models.py  urls.py
posts/migrations/: 0001_initial.py
posts/pagination/: posts.py
posts/serializers/: posts.py
posts/views/: posts.py
users/: managers.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_patronymic_user_age_user_city_and_more.py  0003_phonenumberverifysms_emailverifications.py  0004_bodyvolume_externalindicators_physicalindicators_and_more.py  0005_physicalindicator_and_more.py  0006_alter_bodyvolume_biceps_alter_bodyvolume_bust_and_more.py
